добавил htaccess и поправил разную мелоч

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Darkfriend - full-stack developer">
         <meta name="keywords" content="darkfriend, full-stack developer, full stack">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <div class="wrapper">
@@ -14,7 +14,7 @@
                 <div class="cap">
                     <img src="img/darkfriend-cap-img.jpg" alt="darkfriend cap">
                     <div class="hello">
-                        <span class="heading">Let's be work?</span>
+                        <span class="heading">Let's work?</span>
                         <a href="mail:hi@darkfriend.ru" class="abs_text">hi@darkfriend.ru</a>
                     </div>
                 </div>
