--- a/source/html/index.html
+++ b/source/html/index.html
@@ -32,7 +32,7 @@
                 </li>
             </ul>
             <hr/>
-            <p class="c-paragraph c-paragraph--who">Founder is:</p>
+            <p class="c-paragraph c-paragraph--who">Founder:</p>
             <div class="d-link-group">
                 <a href="//dev2fun.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@dev2fun</a>
                 <a href="//lookslikemagazine.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@looksellermagazine</a>
@@ -40,7 +40,7 @@
                 <a href="//artio.org/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@artio</a>
                 <a href="//casengine.net/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@casengine</a>
             </div>
-            <p class="c-paragraph c-paragraph--who">Developer is:</p>
+            <p class="c-paragraph c-paragraph--who">Developer:</p>
             <div class="d-link-group">
                 <a href="//dev2fun.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@dev2fun</a>
                 <a href="//lookslikemagazine.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@looksellermagazine</a>
