--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="//github.com/darkfriend" class="d-link--social" target="_blank">
                     <img src="/img/icons/github.png" alt="github">
                 </a>
-                <a href="//vk.com/victor_gunter" class="d-link--social" target="_blank">
+                <a href="//vk.com/bugfusion" class="d-link--social" target="_blank">
                     <img src="/img/icons/vk.png" alt="vk">
                 </a>
                 <a href="//www.facebook.com/bugfusion" class="d-link--social" target="_blank">
@@ -63,6 +63,21 @@
                 <a href="//ask.fm/victor_gunter" class="d-link--social" target="_blank">
                     <img src="/img/icons/askfm.png" alt="askfm">
                 </a>
+            </div>
+            <p class="c-paragraph c-paragraph--who">Skills:</p>
+            <div class="d-link-group">
+                <div class="d-link">php7</div>
+                <div class="d-link">python3</div>
+                <div class="d-link">javascript(es8+)</div>
+                <div class="d-link">sql</div>
+                <div class="d-link">postresql|mysql</div>
+                <div class="d-link">pug|html|scss|css</div>
+                <div class="d-link">gulp|webpack</div>
+                <div class="d-link">yii2|django|bitrix|wordpress</div>
+                <div class="d-link">vue.js|jquery|react.js</div>
+                <div class="d-link">phonegap|ionic</div>
+                <div class="d-link">ubuntu|windows</div>
+                <div class="d-link">phpstorm|sublime3</div>
             </div>
         </div>
     </div>
