--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Darkfriend - fullstack developer from is Russia</title>
+    <title>Darkfriend developer</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Darkfriend - full-stack developer">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
+    <meta name="description" content="Darkfriend full-stack developer from Russia">
     <meta name="keywords" content="darkfriend, full-stack developer, fullstack">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.css?v2.2">
 </head>
 <body class="hcenter">
 
 <div class="o-container o-container--xlarge d-container">
-    <div class="o-grid">
-        <div class="o-grid__cell o-grid__cell--width-40">
-            <img src="/img/darkfriend.jpg" alt="darkfriend">
+    <div class="o-grid o-grid--wrap">
+        <div class="o-grid__cell o-grid__cell--width-30@large o-grid__cell--width-30">
+            <img src="/img/darkfriend.jpg" class="darkfriend_image" alt="darkfriend">
         </div>
         <div class="o-grid__cell o-grid__cell--width-60">
             <h1 class="c-heading u-super">Victor @darkfriend</h1>
-            <ul class="c-list c-list--inline c-list--unstyled">
+            <ul class="c-list c-list--inline c-list--unstyled o-grid--wrap">
                 <li class="c-list__item">
                     <img src="/img/icons/coding.png" alt="coding" class="">
                     <div class="o-grid-text">CIO/CTO and fullstack developer</div>
                 </li>
                 <li class="c-list__item">
                     <img src="/img/icons/location.png" alt="coding" class="">
-                    <div class="o-grid-text">Saint-Petersburg (RU)</div>
+                    <div class="o-grid-text">Saint Petersburg (RUS)</div>
                 </li>
                 <li class="c-list__item">
                     <img src="/img/icons/mail.png" alt="coding" class="">
@@ -35,8 +35,9 @@
             <p class="c-paragraph c-paragraph--who">Founder:</p>
             <div class="d-link-group">
                 <a href="//dev2fun.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@dev2fun</a>
-                <a href="//at360.ru/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@at360</a>
-                <a href="//lookslikemagazine.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@looksellermagazine</a>
+                <a href="//advfox.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@advfox</a>
+                <a href="#" class="d-link" onclick="return false;">@iqliner</a>
+                <!--                <a href="//lookslikemagazine.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@looksellermagazine</a>-->
                 <a href="//rockisfest.ru/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@rockisfest</a>
                 <a href="//artio.org/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@artio</a>
                 <a href="//casengine.net/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@casengine</a>
@@ -44,22 +45,24 @@
             <p class="c-paragraph c-paragraph--who">Developer:</p>
             <div class="d-link-group">
                 <a href="//dev2fun.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@dev2fun</a>
-                <a href="//lookslikemagazine.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@looksellermagazine</a>
+                <a href="//advfox.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@advfox</a>
+                <a href="#" class="d-link" onclick="return false;">@iqliner</a>
+                <!--                <a href="//lookslikemagazine.com/?utm_source=darkfriend&utm_medium=referral" class="d-link" target="_blank">@looksellermagazine</a>-->
             </div>
             <p class="c-paragraph c-paragraph--who">Social:</p>
             <div class="d-link-group">
                 <a href="//github.com/darkfriend" class="d-link--social" target="_blank">
                     <img src="/img/icons/github.png" alt="github">
                 </a>
-                <a href="//vk.com/bugfusion" class="d-link--social" target="_blank">
-                    <img src="/img/icons/vk.png" alt="vk">
-                </a>
                 <a href="//www.facebook.com/bugfusion" class="d-link--social" target="_blank">
                     <img src="/img/icons/facebook.png" alt="facebook">
                 </a>
-                <a href="//twitter.com/bugfusion" class="d-link--social" target="_blank">
-                    <img src="/img/icons/twitter.png" alt="twitter">
+                <a href="//vk.com/bugfusion" class="d-link--social" target="_blank">
+                    <img src="/img/icons/vk.png" alt="vk">
                 </a>
+                <!--                <a href="//twitter.com/bugfusion" class="d-link&#45;&#45;social" target="_blank">-->
+                <!--                    <img src="/img/icons/twitter.png" alt="twitter">-->
+                <!--                </a>-->
                 <a href="//ask.fm/victor_gunter" class="d-link--social" target="_blank">
                     <img src="/img/icons/askfm.png" alt="askfm">
                 </a>
@@ -68,16 +71,19 @@
             <div class="d-link-group">
                 <div class="d-link">php7</div>
                 <div class="d-link">python3</div>
+                <div class="d-link">golang</div>
                 <div class="d-link">javascript(es8+)</div>
+                <div class="d-link">nodejs</div>
                 <div class="d-link">sql</div>
                 <div class="d-link">postresql|mysql</div>
-                <div class="d-link">pug|html|scss|css</div>
-                <div class="d-link">gulp|webpack</div>
+                <div class="d-link">jade|pug|html|scss|css</div>
+                <div class="d-link">webpack|gulp</div>
                 <div class="d-link">yii2|django|bitrix|wordpress</div>
-                <div class="d-link">vue.js|jquery|react.js</div>
-                <div class="d-link">phonegap|ionic</div>
+                <div class="d-link">vuejs|jquery</div>
+                <div class="d-link">phonegap|cordova|ionic</div>
+                <div class="d-link">docker|vagrant</div>
                 <div class="d-link">ubuntu|windows</div>
-                <div class="d-link">phpstorm|sublime3</div>
+                <div class="d-link">phpstorm|pycharm|goland|vscode|sublime3</div>
             </div>
         </div>
     </div>
